[project]
name = "user-interactions-faker"
version = "0.0.1-alpha.1"
description = "An unified analysis toolkit for user interactions"
readme = "./README.md"
license = { file = "./LICENSE" }
authors = [
  { name = "Diógenes Oliveira", email = "diogenes1oliveira@gmail.com" },
]
requires-python = ">=3.13"

dependencies = []

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/user_interactions_faker"]

[tool.uv]
native-tls = true
package = true

[project.scripts]
user-interactions-faker = "user_interactions_faker.__main__:cli"

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.14.5",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
asyncio_mode = "auto"
addopts = "--doctest-modules --ignore=var/ --ignore=.dev/ --ignore=tmp/ --ignore=.direnv/"


[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
disable_error_code = ["comparison-overlap", "type-abstract"]

[tool.ruff]
target-version = "py313"
line-length = 120
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["**/monkeypatch.py"]
honor_noqa = true
treat_comments_as_code = [
  "# isort: skip",
  "# isort: split",
  "# isort: off",
  "# isort: on",
]
known_first_party = ["user_interactions_faker"]

[tool.jupysql.SqlMagic]
displaylimit = 50
